syntax = "proto3";

package targeting;

enum LogicalOp {
	UnKnown = 0;
	Or = 1;
	And = 2;
}

message Predicate {
	message Value {
		message Range {
			uint64 begin = 1;
			uint64 end = 2;
		}
		enum Type {
			UnKnown = 0;
			ID = 1;
			RANGE = 2;
		}
		Type type = 1;
		uint64 id  = 2;
		Range range = 3;
	}
	bool not = 1;
	repeated Value value = 2;	
}

message BETree {
	bool not = 1;
	LogicalOp op = 2;
	Predicate predicate = 3;
	repeated BETree betree = 4;
}

// 广告定向布尔表达式
message TargetingBE {
	uint64 aid = 1;
	BETree betree = 2;
}

// 转化为DNF的定向表达
message TargetingDNF {
	message Conjunction {
		repeated Predicate predicate = 1;
	}
	uint64 aid = 1;
	repeated Conjunction conjunction = 2;	
}

